--- a/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
+++ b/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
@@ -3,33 +3,46 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Xinema</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <!---start-wrap---->
+    <!---start-header---->
+    <div class="header">
+        <div class="wrap">
+            <!---start-logo---->
+            <div class="logo">
+                <a href="#"><img src="~/images/logo.png" title="logo" /></a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Showtimes", "Index", "Showtimes")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+            <!---End-logo---->
+            <!---start-top-menu-search---->
+            <div class="top-menu">
+                <div class="top-nav">
+                    <ul>
+                        <li><a href="#">Cinemas</a></li>
+                        <li><a href="#">Showtimes</a></li>
+                        <li><a href="#">Movies</a></li>
+                        
+                    </ul>
+                </div>
+                <div class="search">
+                    <form>
+                        <input type="text" class="textbox" value="Search:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
+                        <input type="submit" value=" " />
+                    </form>
+                </div>
+                <div class="clear"> </div>
             </div>
+            <div class="clear"> </div>
+            <!---End-top-menu-search---->
         </div>
+        <!---End-header---->
     </div>
+    <div class="clear"> </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
