added movies model,conntroller deleted uneccessary views and controllers added sample for loop to display movie name from db

--- a/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
+++ b/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
@@ -25,12 +25,12 @@
         <div class="wrap">
             <div class="header-bottom-left">
                 <div class="logo">
-                    <a href="index.html"><img src="~/images/logo.png" alt="" /></a>
+                    <img src="~/images/logo.png" alt="" /></a>
                 </div>
                 <div class="menu">
                     <ul class="megamenu skyblue">
                         <li class="active grid">@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Showtimes","Index","Showtimes")</li>
+                        <li>@Html.ActionLink("Movies","Index","Movies")</li>
                         <li><a class="color7" href="#">Cinemas  </a></li>
                     </ul>
                 </div>
