Add Scrapper to CinemaController
Installed nuget packages PhantomJS and Selenium Web driver, using View Model pattern to display the scrapped data from the controller to the cinema index view

--- a/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
+++ b/XinemaProject/XinemaProject/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <ul class="megamenu skyblue">
                         <li class="active grid">@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Movies","Index","Movies")</li>
-                        <li><a class="color7" href="#">Cinemas  </a></li>
+                        <li><a class="color7" href=@Url.RouteUrl("cinemas")>Cinemas  </a></li>
                     </ul>
                 </div>
             </div>
