--- a/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
+++ b/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
@@ -6,23 +6,21 @@
 }
 
 
-@foreach (var item in Model)
-{
-    <div class="col_1_of_3 span_1_of_3">
-        <a href="#">
-            <div class="inner_content clearfix">
-                <div class="product_image">
-                    <img src="~/images/janegotagun.jpg" alt="" />
-                </div>
-                <div class="price">
-                    <div class="cart-left">
-                        <p class="title">@Html.DisplayFor(modelItem => item.CinemaName)</p>
+
+
+<div class="container">
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+
+                    <div class="caption">
+                        <h3>@Html.DisplayFor(modelItem => item.CinemaName)</h3>
+
                     </div>
-                    <div class="cart-right"> </div>
-                    <div class="clear"></div>
                 </div>
             </div>
-        </a>
+        }
     </div>
-
-}
+</div>
