--- a/XinemaProject/XinemaProject/Views/Movies/Index.cshtml
+++ b/XinemaProject/XinemaProject/Views/Movies/Index.cshtml
@@ -2,24 +2,25 @@
 
 @{
     ViewBag.Title = "Movies";
+   
 }
-@foreach (var item in Model)
-{
-    <div class="col_1_of_3 span_1_of_3">
-        <a href="#">
-            <div class="inner_content clearfix">
-                <div class="product_image">
-                    <img src="~/images/janegotagun.jpg" alt="" />
-                </div>
-                <div class="price">
-                    <div class="cart-left">
-                        <p class="title">@Html.DisplayFor(modelItem => item.moviesName)</p>
+
+
+<div class="container">
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+
+                    <div class="caption">
+                        <h3>@Html.DisplayFor(modelItem => item.moviesName)</h3>
+                      
                     </div>
-                    <div class="cart-right"> </div>
-                    <div class="clear"></div>
                 </div>
             </div>
-        </a>
+        }
     </div>
+</div>
 
-}
+
