Update Scrapper and Cinemas View
Included scrapping for cinema location

--- a/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
+++ b/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
@@ -17,6 +17,7 @@
 
                     <div class="caption">
                         <h3>@Html.DisplayFor(modelItem => item.CinemaName)</h3>
+                        <p>@item.CinemaAddress</p>
 
                     </div>
                 </div>
