cinema page seperated into each vendor

--- a/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
+++ b/XinemaProject/XinemaProject/Views/Cinemas/Index.cshtml
@@ -11,10 +11,37 @@
 </div>
 <div class="clear">
 </div>
+@foreach (var item in ViewBag.CinemaOrderByDropDownListItems)
+{
+    if (item.Selected == true)
+    {
+        if (item.Text == "All")
+        {
 
+        }
+        else
+        {
+            <h2 class="head">@item.Text</h2>
+        }
+
+    }
+
+}
 <div class="container">
-    <div class="row">
-        @foreach (var item in Model)
+@foreach (var item in ViewBag.CinemaOrderByDropDownListItems)
+{
+    if (item.Selected == true && item.Text == "All")
+    {
+
+            <h2 class="head">Golden Village</h2>
+
+
+
+    }
+
+}
+    <div class="top-box">
+        @foreach (var item in Model.Where(item => item.CinemaName.Contains("Golden Village") || item.CinemaAddress.Contains("Golden Village")))
         {
             <div class="col-sm-6 col-md-6">
                 <div class="thumbnail">
@@ -28,4 +55,61 @@
             </div>
         }
     </div>
+    <div class="clear"></div>
+    @foreach (var item in ViewBag.CinemaOrderByDropDownListItems)
+    {
+        if (item.Selected == true && item.Text == "All")
+        {
+
+            <h2 class="head">Shaw</h2>
+
+
+
+        }
+
+    }
+    <div class="top-box">
+        @foreach (var item in Model.Where(item => item.CinemaName.Contains("Shaw") || item.CinemaAddress.Contains("Golden Village")))
+        {
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+
+                    <div class="caption">
+                        <h3>@Html.DisplayFor(modelItem => item.CinemaName)</h3>
+                        <p>@item.CinemaAddress</p>
+
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="clear"></div>
+@foreach (var item in ViewBag.CinemaOrderByDropDownListItems)
+{
+    if (item.Selected == true && item.Text == "All")
+    {
+
+        <h2 class="head">Cathay</h2>
+
+
+
+    }
+
+}
+    <div class="top-box">
+        @foreach (var item in Model.Where(item => item.CinemaName.Contains("Cathay") || item.CinemaAddress.Contains("Cathay")))
+        {
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+
+                    <div class="caption">
+                        <h3>@Html.DisplayFor(modelItem => item.CinemaName)</h3>
+                        <p>@item.CinemaAddress</p>
+
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="clear"></div>
 </div>
